<resources>
    <string name="app_name">Graduation_Project_2021</string>
    <string name="enter_username">Enter username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="Username">Enter Username</string>
    <string name="title_activity_registration_form">Registration_Form</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_the_user_name">Enter the user name</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create">Create</string>
    <string name="wbc">WBC</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>